package crypto.theblockchainpost.designpatterns.decorator;

public abstract class CondimentDecorator extends Beverage {

    Beverage beverage;

    public abstract String getDescription();

}
